--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <h1>CRUD </h1>
 </mat-toolbar>
-
+<router-outlet></router-outlet>
 <!-- Table Content -->
 <mat-card-actions>
   <button mat-fab color="primary" style="margin: 1em;">
@@ -48,3 +48,5 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
+
+<button mat-button (click)="openDialog()">Open dialog</button>
