--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,51 @@
-<p>user works!</p>
+<mat-toolbar color="primary">
+    <h1>CRUD </h1>
+</mat-toolbar>
+<!-- Table Content -->
+<mat-card-actions>
+    <button mat-fab color="primary" style="margin: 1em;">
+        <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
+    </button>
+    <button mat-fab color="primary">
+        <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
+    </button>
+</mat-card-actions>
+
+<div style="margin: 1em;">
+    <p>Users</p>
+</div>
+<div class="mat-elevation-z8" style="margin: 1em;">
+    <table mat-table [dataSource]="dataSource">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="weight">
+            <th mat-header-cell *matHeaderCellDef> Weight </th>
+            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="symbol">
+            <th mat-header-cell *matHeaderCellDef> Symbol </th>
+            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
+
+<button mat-button (click)="openDialog()">Open dialog</button>
