added material modal

--- a/src/app/components/modal-add-user/modal-add-user.component.html
+++ b/src/app/components/modal-add-user/modal-add-user.component.html
@@ -1,1 +1,3 @@
-<p>modal-add-user works!</p>
+<div class="modal-add-user">
+    <button mat-button (click)="openDialog()">Open dialog</button>
+</div>
