--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -48,4 +48,6 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
 
-<button mat-button (click)="openDialog()">Open dialog</button>
+<app-modal-add-user>
+
+</app-modal-add-user>
