--- a/src/app/components/modal-update-user/modal-update-user.component.html
+++ b/src/app/components/modal-update-user/modal-update-user.component.html
@@ -6,7 +6,6 @@
         </span>
         <mat-icon aria-hidden="false" aria-label="Example home icon" color="warn">notification_important</mat-icon>
     </div>
-
     <mat-form-field class="example-full-width">
         <input matInput placeholder="Name" [(ngModel)]="data.name" formControlName="name">
         <mat-error> Name is required.</mat-error>
@@ -18,8 +17,13 @@
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="telefone" [(ngModel)]="data.telefone" formControlName="telefone">
+        <input matInput placeholder="phone" [(ngModel)]="data.telefone" formControlName="telefone">
         <mat-error> Telefone is required.</mat-error>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width">
+        <input matInput placeholder="description" [(ngModel)]="data.description" formControlName="description">
+        <mat-error> Description is required.</mat-error>
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
