change button location to call modal component

--- a/src/app/components/modal-add-user/modal-add-user.component.html
+++ b/src/app/components/modal-add-user/modal-add-user.component.html
@@ -1,3 +1,10 @@
 <div class="modal-add-user">
-    <button mat-button (click)="openDialog()">Open dialog</button>
+    <mat-card-actions>
+        <button mat-fab color="primary" style="margin: 1em;" (click)="openDialog()">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
+        </button>
+        <button mat-fab color="primary">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
+        </button>
+    </mat-card-actions>
 </div>
