--- a/src/app/components/modal-add-user/modal-add-user.component.css
+++ b/src/app/components/modal-add-user/modal-add-user.component.css
@@ -1,3 +1,9 @@
-.modal-add-user {
-    margin: 1em;
-}
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
