adjust edit modal

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,16 +2,6 @@
     <h1>CRUD </h1>
 </mat-toolbar>
 <!-- Table Content -->
-<!-- <mat-card-actions>
-    <button mat-fab color="primary" style="margin: 1em;">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
-    </button>
-    <button mat-fab color="primary">
-        <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
-    </button>
-</mat-card-actions> -->
-
-<!-- <app-modal-add-user> </app-modal-add-user> -->
 
 <div class="modal-add-user">
     <mat-card-actions>
@@ -19,7 +9,7 @@
             <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
         </button>
         <button mat-fab color="primary">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="editDialog()">editar</mat-icon>
         </button>
     </mat-card-actions>
 </div>
