--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -44,6 +44,14 @@
             <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-raised-button color="primary" class="push-right" (click)="editDialog()">Edit</button>
+                <button mat-raised-button color="warn" class="push-right">Delete</button>
+            </td>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
