--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,19 +1,28 @@
 table {
-    width: 100%;
-  }
+  width: 100%;
+}
 
 .mat-elevation-z6 {
-    box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
 }
 
 mat-toolbar {
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 mat-toolbar {
   color: #fff !important;
+}
+
+.mat-header-cell {
+  background: #3F51B5 !important;
+  color: #FFFFFF !important;
+}
+
+.mat-elevation-z8 {
+  box-shadow: 0 5px 5px -3px rgb(63, 81, 181, 0.5), 0 8px 10px 1px rgb(63, 81, 181, 0.5), 0 3px 14px 2px rgb(63, 81, 181, 0.5);
 }
