--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -26,3 +26,8 @@ mat-toolbar {
 .mat-elevation-z8 {
   box-shadow: 0 5px 5px -3px rgb(63, 81, 181, 0.5), 0 8px 10px 1px rgb(63, 81, 181, 0.5), 0 3px 14px 2px rgb(63, 81, 181, 0.5);
 }
+
+.mat-cell,
+.mat-footer-cell {
+  color: #3F51B5 !important;
+}
