--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,7 +7,7 @@
 
 <div [ngStyle]="{'background':'#3F51B5'}">
     <mat-card-actions>
-        <button mat-fab color="primary" style="margin: 1em;" (click)="openDialog()">
+        <button mat-fab style="margin: 1em;" color="primary" (click)="openDialog()">
             <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
         </button>
     </mat-card-actions>
