--- a/src/app/components/modal-add-user/modal-add-user.component.html
+++ b/src/app/components/modal-add-user/modal-add-user.component.html
@@ -7,22 +7,22 @@
         </span>
     </div>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Name" [(ngModel)]="data.name" formControlName="name">
+        <input matInput placeholder="Name" [(ngModel)]="data.userName" formControlName="userName">
         <mat-error> Name is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="animal" [(ngModel)]="data.animal" formControlName="animal">
+        <input matInput placeholder="animal" [(ngModel)]="data.userDescription" formControlName="userDescription">
         <mat-error> Animal is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="phone" [(ngModel)]="data.telefone" formControlName="telefone">
+        <input matInput placeholder="phone" [(ngModel)]="data.userPrice" formControlName="userPrice">
         <mat-error> Telefone is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="description" [(ngModel)]="data.description" formControlName="description">
+        <input matInput placeholder="description" [(ngModel)]="data.userLastname" formControlName="userLastname">
         <mat-error> Description is required.</mat-error>
     </mat-form-field>
 </div>
