--- a/src/app/components/modal-update-user/modal-update-user.component.html
+++ b/src/app/components/modal-update-user/modal-update-user.component.html
@@ -7,22 +7,23 @@
         <mat-icon aria-hidden="false" aria-label="Example home icon" color="warn">notification_important</mat-icon>
     </div>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Name" [(ngModel)]="data.name" formControlName="name">
+        <input matInput placeholder="userName" [(ngModel)]="data.userName" formControlName="userName">
         <mat-error> Name is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="animal" [(ngModel)]="data.animal" formControlName="animal">
+        <input matInput placeholder="userDescription" [(ngModel)]="data.userDescription"
+            formControlName="userDescription">
         <mat-error> Animal is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="phone" [(ngModel)]="data.telefone" formControlName="telefone">
+        <input matInput placeholder="userPrice" [(ngModel)]="data.userPrice" formControlName="userPrice">
         <mat-error> Telefone is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="description" [(ngModel)]="data.description" formControlName="description">
+        <input matInput placeholder="userLastname" [(ngModel)]="data.userLastname" formControlName="userLastname">
         <mat-error> Description is required.</mat-error>
     </mat-form-field>
 </div>
