fixed modal body mat error names

--- a/src/app/components/modal-add-user/modal-add-user.component.html
+++ b/src/app/components/modal-add-user/modal-add-user.component.html
@@ -7,23 +7,24 @@
         </span>
     </div>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Name" [(ngModel)]="data.userName" formControlName="userName">
-        <mat-error> Name is required.</mat-error>
+        <input matInput placeholder="userName" [(ngModel)]="data.userName" formControlName="userName">
+        <mat-error> userName is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="animal" [(ngModel)]="data.userDescription" formControlName="userDescription">
-        <mat-error> Animal is required.</mat-error>
+        <input matInput placeholder="userDescription" [(ngModel)]="data.userDescription"
+            formControlName="userDescription">
+        <mat-error> userDescription is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="phone" [(ngModel)]="data.userPrice" formControlName="userPrice">
-        <mat-error> Telefone is required.</mat-error>
+        <input matInput placeholder="userPrice" [(ngModel)]="data.userPrice" formControlName="userPrice">
+        <mat-error> userPrice is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="description" [(ngModel)]="data.userLastname" formControlName="userLastname">
-        <mat-error> Description is required.</mat-error>
+        <input matInput placeholder="userLastname" [(ngModel)]="data.userLastname" formControlName="userLastname">
+        <mat-error> userLastname is required.</mat-error>
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
