--- a/src/app/components/modal-update-user/modal-update-user.component.html
+++ b/src/app/components/modal-update-user/modal-update-user.component.html
@@ -8,23 +8,23 @@
     </div>
     <mat-form-field class="example-full-width">
         <input matInput placeholder="userName" [(ngModel)]="data.userName" formControlName="userName">
-        <mat-error> Name is required.</mat-error>
+        <mat-error> userName is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
         <input matInput placeholder="userDescription" [(ngModel)]="data.userDescription"
             formControlName="userDescription">
-        <mat-error> Animal is required.</mat-error>
+        <mat-error> userDescription is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
         <input matInput placeholder="userPrice" [(ngModel)]="data.userPrice" formControlName="userPrice">
-        <mat-error> Telefone is required.</mat-error>
+        <mat-error> userPrice is required.</mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="example-full-width">
         <input matInput placeholder="userLastname" [(ngModel)]="data.userLastname" formControlName="userLastname">
-        <mat-error> Description is required.</mat-error>
+        <mat-error> userLastname is required.</mat-error>
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
