--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -51,7 +51,7 @@
         <ng-container matColumnDef="action" stickyEnd>
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" class="push-left" (click)="editDialog()">
+                <button mat-raised-button color="primary" class="push-left" (click)="editDialog(element)">
                     <mat-icon aria-hidden="false" aria-label="Example home icon">editar
                     </mat-icon>
                 </button>
