finished delete method

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -55,7 +55,8 @@
                     <mat-icon aria-hidden="false" aria-label="Example home icon">editar
                     </mat-icon>
                 </button>
-                <button mat-raised-button color="warn" class="push-right" style="margin-left: 0.3em;">
+                <button mat-raised-button color="warn" class="push-right" style="margin-left: 0.3em;"
+                    (click)="deleteUser(element._id)">
                     <mat-icon aria-hidden="false" aria-label="Example home icon">remove_circle_outline
                     </mat-icon>
                 </button>
