--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -10,6 +10,9 @@
         <button mat-fab style="margin: 1em;" color="primary" (click)="openDialog()">
             <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
         </button>
+        <button mat-fab style="margin: 1em;" color="primary" (click)="searchUser('Philip')">
+            <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
+        </button>
     </mat-card-actions>
 </div>
 
