--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,17 +7,20 @@
 
 <div [ngStyle]="{'background':'#3F51B5'}">
     <mat-card-actions>
-        <button mat-fab style="margin: 0.4em;" color="" (click)="getUsers()">
+        <button mat-fab style="margin: 0.4em;" color="" (click)="getUsers()" matTooltip="List all users">
             <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">home</mat-icon>
         </button>
 
-        <button mat-fab style="margin-left: 0.3em; margin-right: 2em;" color="" (click)="openDialog()">
+        <button mat-fab style="margin-left: 0.3em; margin-right: 2em;" color="" (click)="openDialog()"
+            matTooltip="Register User">
             <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">add</mat-icon>
         </button>
 
         <input placeholder="Enter user name to search" [(ngModel)]="searchWord">
-        <button mat-fab style="margin: 1px;" color="" (click)="searchUser('Philip')">
-            <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">search</mat-icon>
+        <button mat-fab style="margin: 2px;" color="" (click)="searchUser('Philip')">
+            <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary" matTooltip="Search user"
+                [matTooltipPosition]="positionRight.value">search
+            </mat-icon>
         </button>
 
     </mat-card-actions>
@@ -62,12 +65,14 @@
         <ng-container matColumnDef="action" stickyEnd>
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" class="push-left" (click)="editDialog(element)">
+                <button mat-raised-button color="primary" class="push-left" (click)="editDialog(element)"
+                    matTooltip="Edit user" [matTooltipPosition]="positionLeft.value">
                     <mat-icon aria-hidden="false" aria-label="Example home icon">editar
                     </mat-icon>
                 </button>
                 <button mat-raised-button color="warn" class="push-right" style="margin-left: 0.3em;"
-                    (click)="deleteUser(element._id)">
+                    (click)="deleteUser(element._id)" matTooltip="Delete user"
+                    [matTooltipPosition]="positionRight.value">
                     <mat-icon aria-hidden="false" aria-label="Example home icon">remove_circle_outline
                     </mat-icon>
                 </button>
