--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,87 +1,90 @@
 <mat-toolbar color="primary" class="mat-elevation-z6">
-    <i class="material-icons" style="margin-right: 2px; margin-left: -0.3em; font-size: 60px;">
-        dashboard
-    </i>
-    <p style="font-family: Roboto;"> Users Manager </p>
+  <i class="material-icons" style="margin-right: 2px; margin-left: -0.3em; font-size: 60px;">
+    dashboard
+  </i>
+  <p style="font-family: Roboto;"> Users Manager </p>
 </mat-toolbar>
 
 <div [ngStyle]="{'background':'#3F51B5'}">
-    <mat-card-actions>
-        <button mat-fab style="margin: 0.4em;" color="" (click)="getUsers()" matTooltip="List all users">
-            <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">home</mat-icon>
-        </button>
+  <mat-card-actions>
+    <button mat-fab style="margin: 0.4em;" color="" (click)="getUsers()" matTooltip="List all users">
+      <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">home</mat-icon>
+    </button>
 
-        <button mat-fab style="margin-left: 0.3em; margin-right: 2em;" color="" (click)="openDialog()"
-            matTooltip="Register User">
-            <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">add</mat-icon>
-        </button>
+    <button mat-fab style="margin-left: 0.3em; margin-right: 2em;" color="" (click)="openDialog()"
+      matTooltip="Register User">
+      <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary">add</mat-icon>
+    </button>
 
-        <input placeholder="Enter user name to search" [(ngModel)]="searchWord">
-        <button mat-fab style="margin: 2px;" color="" (click)="searchUser('Philip')">
-            <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary" matTooltip="Search user"
-                [matTooltipPosition]="positionRight.value">search
-            </mat-icon>
-        </button>
+    <input placeholder="Enter user name to search" [(ngModel)]="searchWord">
+    <button mat-fab style="margin: 2px;" color="" (click)="searchUser('Philip')">
+      <mat-icon aria-hidden="false" aria-label="Example home icon" color="primary" matTooltip="Search user"
+        [matTooltipPosition]="positionRight.value">search
+      </mat-icon>
+    </button>
 
-    </mat-card-actions>
+  </mat-card-actions>
+</div>
 
+<div class="jumbotron">
+  <h1 class="display-4" style="color: #3F51B5;">Welcome to the user management system</h1>
+  <p class="lead" style="color: #3F51B5;">Use the buttons to navigate between options.</p>
 </div>
 
 <!-- Table Content -->
 <div class="mat-elevation-z8" style="margin: 1em;">
-    <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="dataSource">
 
-        <!-- _id Column -->
-        <ng-container matColumnDef="_id" sticky>
-            <th mat-header-cell *matHeaderCellDef> _id </th>
-            <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-        </ng-container>
+    <!-- _id Column -->
+    <ng-container matColumnDef="_id" sticky>
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element._id}} </td>
+    </ng-container>
 
-        <!-- userName Column -->
-        <ng-container matColumnDef="userName">
-            <th mat-header-cell *matHeaderCellDef> userName </th>
-            <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
-        </ng-container>
+    <!-- userName Column -->
+    <ng-container matColumnDef="userName">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+    </ng-container>
 
-        <!-- userDescription Column -->
-        <ng-container matColumnDef="userDescription">
-            <th mat-header-cell *matHeaderCellDef> userDescription </th>
-            <td mat-cell *matCellDef="let element"> {{element.userDescription}} </td>
-        </ng-container>
+    <!-- userDescription Column -->
+    <ng-container matColumnDef="userDescription">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let element"> {{element.userDescription}} </td>
+    </ng-container>
 
-        <!-- userPrice Column -->
-        <ng-container matColumnDef="userPrice">
-            <th mat-header-cell *matHeaderCellDef> userPrice </th>
-            <td mat-cell *matCellDef="let element"> {{element.userPrice}} </td>
-        </ng-container>
+    <!-- userPrice Column -->
+    <ng-container matColumnDef="userPrice">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let element"> {{element.userPrice}} </td>
+    </ng-container>
 
-        <!-- userLastname Column -->
-        <ng-container matColumnDef="userLastname">
-            <th mat-header-cell *matHeaderCellDef> userLastname </th>
-            <td mat-cell *matCellDef="let element"> {{element.userLastname}} </td>
-        </ng-container>
+    <!-- userLastname Column -->
+    <ng-container matColumnDef="userLastname">
+      <th mat-header-cell *matHeaderCellDef> Lastname </th>
+      <td mat-cell *matCellDef="let element"> {{element.userLastname}} </td>
+    </ng-container>
 
 
-        <ng-container matColumnDef="action" stickyEnd>
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-raised-button color="primary" class="push-left" (click)="editDialog(element)"
-                    matTooltip="Edit user" [matTooltipPosition]="positionLeft.value">
-                    <mat-icon aria-hidden="false" aria-label="Example home icon">editar
-                    </mat-icon>
-                </button>
-                <button mat-raised-button color="warn" class="push-right" style="margin-left: 0.3em;"
-                    (click)="deleteUser(element._id)" matTooltip="Delete user"
-                    [matTooltipPosition]="positionRight.value">
-                    <mat-icon aria-hidden="false" aria-label="Example home icon">remove_circle_outline
-                    </mat-icon>
-                </button>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="action" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-raised-button color="primary" class="push-left" (click)="editDialog(element)" matTooltip="Edit user"
+          [matTooltipPosition]="positionLeft.value">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">editar
+          </mat-icon>
+        </button>
+        <button mat-raised-button color="warn" class="push-right" style="margin-left: 0.3em;"
+          (click)="deleteUser(element._id)" matTooltip="Delete user" [matTooltipPosition]="positionRight.value">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">remove_circle_outline
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons></mat-paginator>
 </div>
