--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -3,7 +3,7 @@ table {
 }
 
 .mat-elevation-z6 {
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 
 mat-toolbar {
@@ -19,15 +19,20 @@ mat-toolbar {
 }
 
 .mat-header-cell {
-  background: #3F51B5 !important;
-  color: #FFFFFF !important;
+  background: #3f51b5 !important;
+  color: #ffffff !important;
 }
 
 .mat-elevation-z8 {
-  box-shadow: 0 5px 5px -3px rgb(63, 81, 181, 0.5), 0 8px 10px 1px rgb(63, 81, 181, 0.5), 0 3px 14px 2px rgb(63, 81, 181, 0.5);
+  box-shadow: 0 5px 5px -3px rgb(63, 81, 181, 0.5), 0 8px 10px 1px rgb(63, 81, 181, 0.5),
+    0 3px 14px 2px rgb(63, 81, 181, 0.5);
 }
 
 .mat-cell,
 .mat-footer-cell {
-  color: #3F51B5 !important;
+  color: #3f51b5 !important;
+}
+
+.space-material {
+  flex: 1 1 auto;
 }
