format initial page

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -8,8 +8,8 @@
     <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
   </button>
 
-  <button mat-icon-button color="" (click)="openDialog()" matTooltip="Register User">
-    <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
+  <button mat-stroked-button (click)="openDialog()" matTooltip="Register User">
+    <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>Add User
   </button>
 
   <span class="space-material"></span>
