clear log messages

--- a/src/app/components/modal-add-user/modal-add-user.component.html
+++ b/src/app/components/modal-add-user/modal-add-user.component.html
@@ -12,18 +12,18 @@
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="userDescription" [(ngModel)]="data.userDescription" formControlName="userDescription">
-    <mat-error> userDescription is required.</mat-error>
+    <input matInput placeholder="userEmail" [(ngModel)]="data.userEmail" formControlName="userEmail">
+    <mat-error> userEmail is required.</mat-error>
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="userPrice" [(ngModel)]="data.userPrice" formControlName="userPrice">
-    <mat-error> userPrice is required.</mat-error>
+    <input matInput placeholder="userCPF" [(ngModel)]="data.userCPF" formControlName="userCPF">
+    <mat-error> userCPF is required.</mat-error>
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="userLastname" [(ngModel)]="data.userLastname" formControlName="userLastname">
-    <mat-error> userLastname is required.</mat-error>
+    <input matInput placeholder="userPhone" [(ngModel)]="data.userPhone" formControlName="userPhone">
+    <mat-error> userPhone is required.</mat-error>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
