--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -42,10 +42,10 @@
   <table mat-table [dataSource]="dataSource">
 
     <!-- _id Column -->
-    <ng-container matColumnDef="_id" sticky>
+    <!-- <ng-container matColumnDef="_id" sticky>
       <th mat-header-cell *matHeaderCellDef> ID </th>
       <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- userName Column -->
     <ng-container matColumnDef="userName">
@@ -53,22 +53,22 @@
       <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
     </ng-container>
 
-    <!-- userDescription Column -->
-    <ng-container matColumnDef="userDescription">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.userDescription}} </td>
+    <!-- userEmail Column -->
+    <ng-container matColumnDef="userEmail">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.userEmail}} </td>
     </ng-container>
 
-    <!-- userPrice Column -->
-    <ng-container matColumnDef="userPrice">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.userPrice}} </td>
+    <!-- userCPF Column -->
+    <ng-container matColumnDef="userCPF">
+      <th mat-header-cell *matHeaderCellDef> CPF </th>
+      <td mat-cell *matCellDef="let element"> {{element.userCPF}} </td>
     </ng-container>
 
-    <!-- userLastname Column -->
-    <ng-container matColumnDef="userLastname">
-      <th mat-header-cell *matHeaderCellDef> Lastname </th>
-      <td mat-cell *matCellDef="let element"> {{element.userLastname}} </td>
+    <!-- userPhone Column -->
+    <ng-container matColumnDef="userPhone">
+      <th mat-header-cell *matHeaderCellDef> Phone </th>
+      <td mat-cell *matCellDef="let element"> {{element.userPhone}} </td>
     </ng-container>
 
 
